add theme and styles for welcome page

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: Didot;
   src: url('/Didot\ Regular.ttf');
 }
@@ -8,4 +8,4 @@ body{
   font-family: Didot;
   color: rgba(241, 241, 241, 1);
 }
-
+ */
