--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+/* @font-face {
+  font-family: 'Didot';
+  src: url('/public/Didot\ Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 body{
   margin: 0;
-}
+  background: rgba(30, 30, 30, 1);
+  color: rgba(241, 241, 241, 1);
+  font-family: 'Didot';
+} */
