--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Didot';
-  src: url('/public/Didot\ Regular.ttf');
+  src: url('/Didot\ Regular.ttf');
   font-weight: normal;
   font-style: normal;
 }
